[Qt] API changes to QWebNavigationRequest https://bugs.webkit.org/show_bug.cgi?id=78821

Reviewed by Kenneth Rohde Christiansen.

Changes discussed in API review at Szeged: rename 'button' to 'mouseButton',
rename 'modifiers' to 'keyboardModifiers', remove 'originatingUrl' and
use the enum type for 'action'.

* UIProcess/API/qt/qwebnavigationrequest.cpp:
(QWebNavigationRequestPrivate::QWebNavigationRequestPrivate):
(QWebNavigationRequestPrivate):
(QWebNavigationRequest::QWebNavigationRequest):
(QWebNavigationRequest::setAction):
(QWebNavigationRequest::mouseButton):
(QWebNavigationRequest::keyboardModifiers):
(QWebNavigationRequest::action):
* UIProcess/API/qt/qwebnavigationrequest_p.h:
* UIProcess/API/qt/tests/publicapi/tst_publicapi.cpp:
* UIProcess/API/qt/tests/qmltests/DesktopBehavior/tst_navigationRequested.qml:
* UIProcess/qt/QtWebPagePolicyClient.cpp:
(QtWebPagePolicyClient::decidePolicyForNavigationAction):
* UIProcess/qt/QtWebPagePolicyClient.h:
(QtWebPagePolicyClient):

Canonical link: https://commits.webkit.org/96867@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@109106 268f45cc-cd09-0410-ab3c-d52691b4dbfc